--- a/Main/scripts/HtmlPage1.html
+++ b/Main/scripts/HtmlPage1.html
@@ -19,17 +19,14 @@
     </style>
 </head>
 <body>
-    <div id="map"></div>
+    <input id="map" title="hhh" ma="12" value="10"  nn="10">
+    <script src="jquery-3.4.1.js"></script>
+
     <script>
-      var map;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 8
+        $(document).ready(function () {
+            mm = $('[ma=12]').val();
+            alert(mm);
         });
-      }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"
-            async defer></script>
 </body>
 </html>
