--- a/Main/Htmltest.html
+++ b/Main/Htmltest.html
@@ -14,10 +14,9 @@
     </script>
 </head>
 <body>
-    <form action="/" method="post">
-        <input class="in" type="text" name="name" id="name" value=" " />
-        <input class="in" type="text" name="name" id="name1" value=" " />
-
-    </form>
+    <figure>
+        <img src="skylinedrive.jpg" />
+        <figcaption>105 mile road through Shenandoah National Park</figcaption>
+    </figure>
 </body>
 </html>
