--- a/Main/Htmltest.html
+++ b/Main/Htmltest.html
@@ -5,11 +5,10 @@
 	<meta charset="utf-8" />
     <script src="scripts/jquery-3.2.1.min.js"></script>
     <script>
-        $(document).ready(function () {
-            $("input.in").click(function () {
-                alert(this.id);
-            });
-        });
+        var ff = [];
+        ff.push({ id: 10, name: "hamid" });
+        console.log(ff[0].name);
+        
      
     </script>
 </head>
